--- a/services.html
+++ b/services.html
@@ -299,6 +299,39 @@ footer .widget h5 {
 
         </div>
       </div>
+
+
+      <!-- FOOTER -->
+      <section class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="col-md-4">
+                <h3 style="color: white"> Company</h3>
+                <p>About Us</p>
+                <p>What We Do</p>
+                <p>Contact</p>
+                <p>Tel:061-556674</p>
+              </div>
+
+              <div class="col-md-4">
+                <h3 style="color: white"> Services</h3>
+                <p>Choose your package</p>
+                <p>Help by specialist</p>
+                <p>Get diagnostic report</p>
+              </div>
+
+              <div class="col-md-4">
+                <h3 style="color: white"> Connect With Us</h3>
+                <p>Facebook</p>
+                <p>Instagram</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
       
     </footer>
 
